--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <style>
             * {
                 box-sizing: border-box;
-                font-size: 1.15em;
+                font-size: 1.15rem;
                 font-family: Arial, sans-serif;
             }
             html {
                 max-width: 70ch;
-                padding: 3em 1em;
+                padding: 3rem 1rem;
                 margin: auto;
                 line-height: 1.25;
             }
